# Plantilla_PostFija

./: CMakeLists.txt
Plantilla_PostFija/: CMakeLists.txt  Conjuntos.h  Dobles.h  Fraccion.h  Operando.h  Plantilla_PostFija.cpp  Plantilla_PostFija.h
